refactor: renaming core/entities to core/domain and core/usecases to core/application

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,8 @@
 {
   "material-icon-theme.folders.associations": {
     "core": "rules",
-    "usecases": "class",
-    "entities": "resource",
+    "application": "class",
+    "domain": "resource",
     "presentation": "pipe",
     "infra": "tools",
     "database": "project",
