--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "db:generate": "bunx drizzle-kit generate:pg",
     "db:migrate": "bun run src/infra/database/drizzle/migrate.ts",
     "db:up": "docker compose up -d",
+    "db:stop": "docker compose stop",
     "db:down": "docker compose down",
     "prepare": "husky"
   },
